# waveguide-generator

./: Cargo.toml
src/: geometry_types.rs  main.rs  traits.rs
src/models/: axisym.rs  axisym_clothoid.rs  base.rs  ellipsoidal.rs  mod.rs  oswg.rs  oswg_clothoid.rs  oswg_constant_length.rs  rect_clothoid.rs  rectangular_alpha.rs  rectangular_morph.rs
