[package]
name = "compression-waveguide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stl_io = "0.8.0"  # For STL export
serde = { version = "1.0", features = ["derive"] }  # For CSV serialization
csv = "1.3.1"